// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionRowSender should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center -space-x-1"
    data-testid="TransactionRowMode"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          sent.svg
        </svg>
      </div>
    </div>
    <div
      class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
      data-testid="Avatar"
    >
      <div
        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
      >
        <img
          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
        />
      </div>
    </div>
  </div>
  <div
    class="w-0 flex-1"
  >
    <div
      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
    >
      <span
        class="font-semibold text-base text-theme-text"
        data-testid="Address__alias"
      >
        <span
          class="TruncateEnd__Wrapper-sc-1hhdnni-0"
          data-testid="TruncateEnd"
        >
          ARK Wallet 1
        </span>
      </span>
      <span
        class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
        data-testid="Address__address"
      >
        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionRowSender should render compact 1`] = `
<DocumentFragment>
  <div
    class="flex items-center space-x-2"
    data-testid="TransactionRowMode"
  >
    <span
      class="w-5 h-5 flex items-center border-0 border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          sent.svg
        </svg>
      </div>
    </span>
    <div
      class="Avatar__AvatarWrapper-sc-18vw8a4-0 fIpXvk ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
      data-testid="Avatar"
    >
      <div
        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
      >
        <img
          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
        />
      </div>
    </div>
  </div>
  <div
    class="w-0 flex-1"
  >
    <div
      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
    >
      <span
        class="font-semibold text-base text-theme-text"
        data-testid="Address__alias"
      >
        <span
          class="TruncateEnd__Wrapper-sc-1hhdnni-0"
          data-testid="TruncateEnd"
        >
          ARK Wallet 1
        </span>
      </span>
      <span
        class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
        data-testid="Address__address"
      >
        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
      </span>
    </div>
  </div>
</DocumentFragment>
`;
